<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical"
    tools:context=".OnBoarding">

    <ImageView
        android:id="@+id/tvBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/fondoinfo"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondoinfo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_custom"
        android:text="@string/siguiente"
        android:textColor="#090909"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,3:1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/introduce_tu_nombre"
        android:textColor="#EFEAEA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBackground"
        app:layout_constraintVertical_bias="0.746" />

    <EditText
        android:id="@+id/etPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F6F4F4"
        android:textColorHint="#F4EFEF"
        app:layout_constraintBottom_toTopOf="@+id/etBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        android:maxLength="4"
        android:minHeight="48dp"
        android:textColor="#F6F4F4"
        android:textColorHint="#F4EFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>